# LAB2FASTAPI

./: main.py  pyproject.toml  routes.py
models/: models.py
