# pyproject.toml

[tool.poetry]
name = "fastapi_rest_api"
version = "0.1.0"
description = ""
authors = ["Your Name <youremail@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
pydantic = "^1.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
